# tars

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLANS.md  README.md  ROADMAP.md  main.py  pyproject.toml
docs/: mcp.md  memory.md  routing.md  scheduling.md  search.md
tars/: api.py  brief.py  capture.py  chunker.py  cli.py  colors.py  commands.py  config.py  conversation.py  core.py  db.py  debug.py  email.py  embeddings.py  extractor.py  format.py  indexer.py  mcp.py  memory.py  notes.py  rewriter.py  router.py  scheduler.py  search.py  services.py  sessions.py  strava.py  taskrunner.py  telegram.py  tools.py  weather.py  web.py
tars/static/: index.html
tests/: test_api.py  test_brief.py  test_capture.py  test_chunker.py  test_cli.py  test_colors.py  test_commands.py  test_config.py  test_conversation.py  test_core.py  test_core_openai.py  test_db.py  test_debug.py  test_email.py  test_embeddings.py  test_extractor.py  test_format.py  test_indexer.py  test_mcp.py  test_memory.py  test_notes.py  test_rewriter.py  test_router.py  test_scheduler.py  test_search.py  test_services.py  test_sessions.py  test_strava.py  test_taskrunner.py  test_telegram.py  test_tools.py  test_weather.py  test_web.py
