[project]
name = "tars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.79.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.1",
    "sqlite-vec>=0.1.6",
    "fastapi[standard]>=0.115.0",
    "python-telegram-bot>=22.6",
]

[project.scripts]
tars = "tars.cli:main"
tars-serve = "tars.cli:main_serve"
tars-email = "tars.cli:main_email"
tars-index = "tars.cli:main_index"
tars-telegram = "tars.cli:main_telegram"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
